update public cfg

--- a/2-AWS_DataWarehouse/P3_AWSredshift/dwh.cfg
+++ b/2-AWS_DataWarehouse/P3_AWSredshift/dwh.cfg
@@ -1,9 +1,9 @@
 [AWS]
-key = AKIASZVIMF74C5JXBTWM
-secret = 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
+key = ****
+secret = ****
 
 [CLUSTER]
-host = dwhcluster.cnovlra1bawv.us-east-2.redshift.amazonaws.com
+host = ****
 db_name = dwhproject
 db_user = dwhuser
 db_password = Pass123word
@@ -17,7 +17,7 @@ dwh_iam_role_name = dwhRole
 dwh_cluster_identifier = dwhCluster
 
 [IAM_ROLE]
-arn = arn:aws:iam::192552906744:role/dwhRole
+arn = ****
 
 [S3]
 log_data = 's3://udacity-dend/log_data'
