--- a/3-Spark_DataLake/Project/dl.cfg
+++ b/3-Spark_DataLake/Project/dl.cfg
@@ -1,2 +1,2 @@
-AWS_ACCESS_KEY_ID='AKIAIWOXWKHSG4GZOHSQ'
-AWS_SECRET_ACCESS_KEY='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'
+AWS_ACCESS_KEY_ID='***'
+AWS_SECRET_ACCESS_KEY='***'
